--- a/_config.yml
+++ b/_config.yml
@@ -24,13 +24,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "IODQ-1.png"
-  name             : "Your Sidebar Name"
+  name             : "智慧決策與決策品質實驗室"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "We leverage data analytics and intelligent decision-making to improve operational efficiency and decision quality (專注於運用資料分析與智慧決策，提升營運效率與決策品質)."
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "152400@mail.fju.edu.tw" 
 
   # Academic websites
   academia         : # URL
