--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "IODQ-1.png"
   name             : "智慧決策與決策品質實驗室"
   pronouns         : # example: "she/her"  
-  bio              : "We leverage data analytics and intelligent decision-making to improve operational efficiency and decision quality (專注於運用資料分析與智慧決策，提升營運效率與決策品質)."
+  bio              : "We leverage data analytics and intelligent decision-making to improve operational efficiency and decision quality <br> 專注於運用資料分析與智慧決策，提升營運效率與決策品質."
   location         : "Earth"
   employer         : "Red Brick University"
   uri              : # URL
