--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
   - title: "News"
     url: /news/
   - title: "Advisor"
-    url: /advisor/
+    url: /about/
   - title: "People"
     url: /people/
   - title: "Publications"
