--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
     url: /publications/
   - title: "Grants"
     url: /grants/
-  - title: "Research Hilight"
+  - title: "Research"
     url: /research-hilight/
   - title: "Talks"
     url: /talks/
