--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,4 +1,5 @@
 - title: "Generative AI-driven ESG Report Generator"
+  category: "National Science and Technology Council (國科會)"
   period: "2025–2027"
   sponsor: "NSTC"
   role: "PI"
@@ -6,6 +7,7 @@
   link: "/files/grants/esg-genai.pdf"
 
 - title: "Energy Analytics & Forecasting"
+  category: "Industry-Academia Cooperation (產學合作)"
   period: "2024–2026"
   sponsor: "Industry Collaboration"
   role: "Co-PI"
