--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@ main:
   - title: "Events"
     url: /lab-events/
   - title: "Publications"
-    url: /publications/
+    url: /publications2/
   - title: "Grants"
     url: /grants/
   - title: "Research"
