--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ site_theme               : "default" # The available themes options are "default
 title                    : "Smart Operations and Data Analytics Lab"
 title_separator          : "-"
 name                     : &name "Kai-Bin Huang"
-description              : &description "The Intelligent Operations & Decision Quality Lab (IODQ Lab), directed by Dr. Kai-Bin Huang (黃凱斌) at Fu Jen Catholic University(輔仁大學), conducts interdisciplinary research integrating artificial intelligence, data analytics, and operations management.
-                           Core research themes include AI-driven decision analytics, ESG and sustainability(永續) data science, energy forecasting, and smart manufacturing systems."   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description ""   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://kbhuang188.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : ""
